--- a/css/master.css
+++ b/css/master.css
@@ -5,12 +5,29 @@
 #contentswrap {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 .swiper-slide {
   letter-spacing: 3px;
 }
 .wrap_align {
   z-index: 400;
+}
+
+/* 스크롤 효과 */
+.back-to-position {
+  opacity: 0;
+  transition: 1s;
+}
+.back-to-position.to-right {
+  transform: translateX(-150px);
+}
+.back-to-position.to-left {
+  transform: translateX(150px);
+}
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
 }
 
 /**** GOMAIN ****/
@@ -37,23 +54,119 @@
     .myname:hover > a {
       transform: rotate(-1440deg);
     }
+    
+/**** NAV ****/
+#main_header {
+  width: 100%; height: 50px;
+  position: relative;
+  background-color: #fff;
+}
+#toggle {
+  display: none;
+}
+.toggle_menu {
+  width: 30px; height: 26px;
+  background: url(../images/toggle_btn.png);
+  position: absolute;
+  right: 3%;
+  top: 3%;
+  text-indent: -6000px; overflow: hidden;
+  z-index: 2;
+}
+#main_nav_wrap{
+  width: 100%;
+  position: fixed;
+  right: -100%; top: 0; bottom: 0;
+  z-index: 100;
+}
+input#toggle:checked + #main_nav_wrap{
+  right: 0;
+  transition-duration: 0.3s;
+}
+ul#main_nav{
+  width: 50%;
+  background: #fff;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  overflow: auto;
+}
+ul#main_nav > li {
+  border-bottom: 1px solid #ccc;
+  text-align: left;
+  font-size: 20px;
+}
+ul#main_nav > li:first-child {
+  margin-top: 70px;
+}
+ul#main_nav > li > h3 {
+  height: 54px;
+  border-bottom: 1px solid #ccc;
+  padding-left: 30px;
+  line-height: 54px;
+  font-weight: 700;
+  font-size: 24px;
+  color: #8081d9;
+  cursor: pointer;
+}
+ul#main_nav > li:hover > h3 {
+  color: #717171;
+}
+ul#main_nav > li > h3 > a {
+  color: #8081d9;  
+}
+ul#main_nav > li:hover > h3 > a {
+  color: #717171;
+}
+/***** 세부메뉴 *****/
+  ul#main_nav > li > ul.sub_nav > li{
+    height: 0;
+    overflow: hidden;
+    transition-duration: 0.3s;
+  }
+  ul#main_nav > li.active > ul.sub_nav > li{
+    height: 50px;
+  }
+    ul#main_nav > li > ul.sub_nav > li > a{
+      padding-left: 60px;
+      line-height: 50px;
+      height: 50px;
+      color: #fff;
+      font-size: 20px;
+      background-color: #9b9ce8;
+      transition-duration: 0.3s;
+    }
+    ul#main_nav > li > ul.sub_nav > li:hover > a {
+      color: #fff;
+      background-color: #717171;
+    }
+    #main_nav_wrap > label.btn_close{
+      width: 30px; height: 26px;
+      background: url(../images/toggle_close.png) no-repeat;
+      position: absolute;
+      right: 3%; top: 3%;
+      text-indent: -6000px; overflow: hidden;
+      transform: rotateZ(0deg);
+    }
+    input#toggle:checked + #main_nav_wrap > label.btn_close{
+      transition-duration: 1s;
+      transform: rotateZ(-180deg);
+    }
 
 /**** SECTION1 HOME ****/
 #home {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 #home > img {
     width: 100%;
 }
-  #home > .wrap_align {
-    width: 1600px;
-    margin: 0 auto;
-  }
     #maintitle {
       position: absolute;
-      top: 15%;
-      right: 15%;
+      top: 13%;
+      right: 12%;
     }
       #home > .wrap_align > #maintitle > .logo {
         font-size: 70px;
@@ -73,8 +186,8 @@
 /***** 메뉴 제목 *****/
 .menu {
   position: absolute;
-  top: 15%;
-  left: 20%;
+  top: 60px;
+  left: 230px;
   text-align: left;
 }
 .title {
@@ -91,26 +204,27 @@
 #portfolio {
   width: 100%;
   height: 100%;
+  position: relative;
+  background: linear-gradient( #e3c5e4, #c5b0eb);
 }
-  #portfolio > .wrap_align {
-    width: 100%;
+  #portfolio > .wrap_align > .brandlist {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 3% 10% 0;
   }
-      #portfolio > .wrap_align > .brandlist > ul {
-        width: 1400px;
-        margin: 0 auto;
-        margin-top: 400px;
-      }
         #portfolio > .wrap_align > .brandlist > ul > li {
           display: inline-block;
-          padding: 0 25px;
+          padding: 0 30px;
+          margin-top: 50px;
         }
           #portfolio > .wrap_align > .brandlist > ul > li > a {
             width: 250px;
             height: 250px;
           }
             .brandname {
-              margin-top: 45px;
-              font-size: 25px;
+              margin-top: 25px;
+              font-size: 22px;
             }
 
             /***** 크리스피크림 *****/
@@ -181,70 +295,79 @@
 #me {
   width: 100%;
   height: 100%;
+  position: relative;
+  background: linear-gradient(#c5b0eb, #acc1f9);
 }
   #me > .wrap_align {
-    width: 1600px;
-    margin: 0 auto;
+    position: relative;
+    height: 100%;
   }
-    #me > .wrap_align > .info {
-      position: absolute;
-      top: 370px;
-      left: 16%;
-      font-size: 23px;
-      width: 800px;
+  #me > .wrap_align > .profile_wrap{
+    position: relative;
+    height: 100%;
+    margin: 0 10%;
+  }
+    #me > .wrap_align > .profile_wrap > #profile {
+      position: relative;
+      height: 280px;
     }
-      #me > .wrap_align > .info > ul.question {
+      /* 프로필 사진 */
+      .floating1 {
+        position: absolute;
+        top: 320px;
+        left: 7%;
+      }
+
+    #me > .wrap_align > .profile_wrap > .info {
+      position: absolute;
+      top: 31%;
+      left: 35%;
+      font-size: 23px;
+    }
+      #me > .wrap_align > .profile_wrap > .info > ul.question {
         position: absolute;
         left: 0; top: 0;
         text-align: right;
       }
-        #me > .wrap_align > .info > ul.question > li {
-          padding: 20px 0;
+        #me > .wrap_align > .profile_wrap > .info > ul.question > li {
+          padding: 5px 0;
+          line-height: 50px;
         }
-      #me > .wrap_align > .info > ul.answer {
+        #me > .wrap_align > .profile_wrap > .info > ul.question > li:nth-child(4) {
+          margin-top: 50px;
+        }
+        #me > .wrap_align > .profile_wrap > .info > ul.question > li:last-child {
+          margin-top: 100px;
+        }
+      #me > .wrap_align > .profile_wrap > .info > ul.answer {
         position: absolute;
-        left: 200px; top: 0;
+        left: 200px;
+        top: 0;
         text-align: left;
+        width: 544px;
       }
-        #me > .wrap_align > .info > ul.answer > li {
-          padding: 20px 0;
+        #me > .wrap_align > .profile_wrap > .info > ul.answer > li {
+          padding: 5px 0;
+          line-height: 50px;
         }
-    #me > .wrap_align > #profile {
-      position: absolute;
-      top: 30%;
-      right: 25%;
-    }
-      #me > .wrap_align > #profile > a {
-        width: 280px;
-        height: 280px;
-      }
-       #me > .wrap_align > #profile > a > img {
-        transition-duration: 0.3s;
-        width: 280px; height: 280px;
-        border-radius: 50%;
-        box-shadow: 0 0 0 #fff;
-       }
-       #me > .wrap_align > #profile > a > img:hover {
-        box-shadow: 50px 50px 0 #fff;
-        transform: translateX(8px) translateY(-8px);
-       }
 
 /**** SECTION4 ARTWORKS ****/
 #artwork {
   width: 100%;
   height: 100%;
-  text-align: center;
+  position: relative;
+  background: linear-gradient(#acc1f9, #bfb3ee);
 }
-  #artwork  > .wrap_align {
-    width: 1600px;
-    margin: 0 auto;
-  }
     #artwork > .wrap_align > ul.artlist {
-      margin-top: 370px;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      width: 100%;
     }
       #artwork > .wrap_align > ul.artlist > li {
         display: inline-block;
-        padding: 0 20px;
+        padding: 0 30px;
+        margin-top: 50px;
       }
         #artwork > .wrap_align > ul.artlist > li > a > div {
           transform: scale(1.0);
@@ -255,8 +378,7 @@
         }
         /* project */
           #artwork > .wrap_align > ul.artlist > #project > a > div {
-            width: 300px; height: 300px;
-            background: url(../images/balimoon.png);
+            width: 250px; height: 250px;
           }
           #project > a > h2,
           #graphic > a > h2,
@@ -267,13 +389,11 @@
           }
         /* graphic */
         #artwork > .wrap_align > ul.artlist > #graphic > a > div {
-          width: 300px; height: 300px;
-          background: url(../images/cardnews.png);
+          width: 250px; height: 250px;
         }
         /* drawing */
         #artwork > .wrap_align > ul.artlist > #drawing > a > div {
-          width: 300px; height: 300px;
-          background: url(../images/drawing.png);
+          width: 250px; height: 250px;
         }
         /* photography */
         /*
@@ -287,6 +407,7 @@
 #contact {
   width: 100%;
   height: 100%;
+  background: linear-gradient(#bfb3ee, #e5b9e4);
 }
       #contact > .wrap_align > .address > h2 {
         font-size: 60px;
@@ -304,7 +425,7 @@
         width: 350px; height: 350px;
         margin: 0 auto;
         background: url(../images/contact_bg.png) no-repeat center;
-        margin-top: 40px;
+        margin-top: 80px;
       }
       #contact > .wrap_align > .address > ul.contactme {
         margin-top: -285px;
