--- a/css/swiper.css
+++ b/css/swiper.css
@@ -289,11 +289,9 @@ button.swiper-pagination-bullet {
 .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active::after{
 	content:"";
 	display: block;
-
 	position: absolute;
 	right: 30px; top: 50%;
 	transform: translateY(-50%);
-
 	font-size: 20px;
 }
 .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet:nth-of-type(1).swiper-pagination-bullet-active::after{
@@ -334,6 +332,37 @@ button.swiper-pagination-bullet {
 .swiper-container-horizontal.swiper-container-rtl > .swiper-pagination-bullets-dynamic .swiper-pagination-bullet {
   transition: 200ms transform, 200ms right;
 }
+/* responsive */
+/* web minimum */
+@media (max-width: 1489px) {
+  .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet.swiper-pagination-bullet-active::after {
+    display: none;
+  }
+  .swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    border-radius: 100%;
+    background: #707070;
+    opacity: 1;
+    transition-duration: 0.3s;
+  }
+  .swiper-pagination-bullet-active {
+    opacity: 1;
+    background: var(--swiper-pagination-color, var(--swiper-theme-color));
+    height: 30px;
+    border-radius: 10px;
+  }
+  .swiper-container-vertical > .swiper-pagination-bullets .swiper-pagination-bullet {
+    margin: 10px 10px;
+    display: block;
+    position: relative;
+  }
+
+
+}
+
+
 /* Progress */
 .swiper-pagination-progressbar {
   background: rgba(0, 0, 0, 0.25);
